import java.awt.event.ActionListener

abstract class DrawerButtonAction(val drawer: Drawer) : ActionListener